k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopwave-ingress
  namespace: shopwave
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shopwave-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopwave-frontend
                port:
                  number: 80
